레이아웃 수정 html, css

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint.html
@@ -169,7 +169,7 @@
                     </div>
                     -->
                     <div class="mypage_select_wrap">
-                        <div class="sel_sorting" style="left: 0px;">
+                        <div class="sel_sorting right0">
                             <select name="sel_sort" id="sel_sort">
                                 <option value="all">정렬</option>
                                 <option value="recent">최신순</option>
@@ -178,14 +178,14 @@
                                 <option value="past">과거 순</option>
                             </select>
                         </div>
-                        <div class="sel_sorting" style="left: 50px;">
+                        <div class="sel_sorting right170">
                             <select name="sel_open" id="sel_open">
                                 <option value="all">형태</option>
                                 <option value="Y">공개</option>
                                 <option value="N">비공개</option>
                             </select>
                         </div>
-                        <div class="sel_sorting" style="left: 100px;">
+                        <div class="sel_sorting right340">
                             <select name="sel_gubun" id="sel_gubun">
                                 <option value="">구분</option>
                                 <option value="GAL">갤러리</option>
@@ -195,7 +195,7 @@
                                 <option value="ETC">기타</option>
                             </select>
                         </div>
-                 	    <div class="sel_sorting" style="left: 150px;">
+                 	    <div class="sel_sorting right510">
                             <select name="sel_region" id="sel_region">
                                 <option value="">지역</option>
                                 <option value="SEO">서울</option>
