--- a/src/main/resources/static/css/common_pc.css
+++ b/src/main/resources/static/css/common_pc.css
@@ -9,7 +9,7 @@ ul,ol,dl,li{list-style:none;}
 li{word-break:keep-all;}
 img,fieldset{border:0;vertical-align:middle;}
 img{image-rendering: -webkit-optimize-contrast;image-rendering: crisp-edges;image-rendering: -webkit-optimize-contrast;vertical-align:top;}
-table{table-layout:fixed;border:0;border-spacing:0;border-collapse:collapse;margin: 2rem 0;}
+table{table-layout:fixed;border:0;border-spacing:0;border-collapse:collapse;}
 th,td{border:0;word-wrap:break-word;}
 table img{vertical-align:middle;}
 input,select,textarea{font-family:'Apple SD Gothic Neo', 'Apple SD Gothic', 'Apple Gothic', 'Noto Sans KR', 'Malgun gothic';vertical-align:middle;}
