--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -1438,14 +1438,17 @@ columns2 figure {
 }
 .uesr-s img{}
 .text-s{
-    display: table-cell;
+    display: flex;
     vertical-align: top;
+    flex-direction: column;
+    align-items: flex-start;
 }
 .text-s h3{
     font-size: 14px;
     font-weight: 600;
     color: #333;
     padding-bottom: 3px;
+    margin-top: 0;
 }
 .text-s h4{
     font-size: 16px;
@@ -1457,7 +1460,7 @@ columns2 figure {
     color: #999999;
 }
 .text-s p.ts-1{
-    width: 270px;
+    /* width: 270px; */
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
@@ -6002,7 +6005,7 @@ position: relative;background-color: #fbfbfb;}
 .work-drp .work-div span{ font-size: 14px; display: inline-block; vertical-align: middle; padding-right: 5px; font-weight: 500;}
 .work-drp .work-div img{ vertical-align: middle;}
 
-.work-hov{display:none; position: absolute; top: 51px; left: 50%; width: 260px; background-color: #e9625c; padding: 5px; text-align: left;	z-index: 2;	transform: translateX(-50%);}
+.work-hov{display:none; position: absolute;top: -9px;right: -1222px; width: 260px; background-color: #e9625c; padding: 5px; text-align: left;	z-index: 2;	transform: translateX(-50%);}
 .work-hov ul{ clear: both; border-left: #e8e8e8 1px solid; border-top: #e8e8e8 1px solid;}
 .work-hov ul li{ display: inline-block; width: 50%; text-align: center; float: left; background: #fff;}
 .work-hov ul li a{ display: block; padding: 8px 0; border-bottom: #e8e8e8 1px solid; border-right: #e8e8e8 1px solid;}
