--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
@@ -103,7 +103,7 @@
             <div class="mypage_contents">
                 <div class="contents_left">
                   <div class="myinfo_wrap">
-                    <div class="myinfo_pic" style="background-image: url('https://item.kakaocdn.net/do/8d209a3c00ed5f23eeaa3758a1c7d59c339e41ce89b663315d96faecd7cfd11b')"></div>
+                    <div class="myinfo_pic"><img src="/resources/img/img_new/myinfo_da_pic.png" alt=""></div>
                     <div class="myinfo_con">
                       <ul>
                         <li class="name">Dealing - Art <span></span></li>
