--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage_mo.html
@@ -144,15 +144,15 @@
                     <div class="second">
                         <form action="" method="" id="" name="">
                             <div class="public_nondis">                                    
-                                <span><strong>*</strong>공개여부</span>
+                                <span class="tit"><strong>*</strong>공개여부</span>
                                 <ul>
                                     <li>                                            
-                                        <input type="checkbox" id="a1" name="공개">
-                                        <label for="a1"><span>공개</span></label>
+                                        <input type="checkbox" id="a3" name="공개">
+                                        <label for="a3"><span style="width: 2.5rem;height: 2.5rem;"></span>공개</label>
                                     </li>
                                     <li>                                            
                                         <input type="checkbox" id="a2" name="공개">
-                                        <label for="a2"><span>비공개</span></label>
+                                        <label for="a2"><span style="width: 2.5rem;height: 2.5rem;"></span>비공개</label>
                                     </li>
                                 </ul>
                             </div>
