--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -82,7 +82,7 @@
     </style>
     
     <link rel="icon" type="image/png" href="/resources/img/favicon.png">
-    
+        <link type="text/css" rel="stylesheet" href="/resources/css/common_new.css"/>
 </head>
 
 <body>
@@ -90,13 +90,13 @@
 		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		
 		<div class="body-wrap">
-			<div class="contents">
-				
-				<div class="con-wrap">
-					<th:block th:replace="thymeleaf/myPageLeft :: myPageLeftFragment"></th:block>
-					<div class="con-right m-max1300">
-						<div class="me-left me-move">
-							<div class="me-sech">
+			<div class="mypage_wrap">
+				<h2>My Deal</h2>
+				<div class="mypage_contents">
+	            	<div id = "left_menu"></div>
+					<div class="contents_right">
+						<div class="me-move">
+							<div>
 								<div class="is-bos">
 		                           <div class="is-sum">
 		                           	  <div class="is-label1">
@@ -252,6 +252,9 @@
 
 <script type="text/javascript">      
  $(document).ready(function () {
+
+  $("#left_menu").load("/myPage/mypage_common_left");  // 레프트 메뉴 삽입
+
   $(".elm").hover(
 	function(){ $(this).addClass('hover') },
     function(){ $(this).removeClass('hover') }
@@ -431,19 +434,22 @@ function bidHistory(dealSq) {
 
 
 jQuery(document).ready(function() {
+	
 	$('.datepicker').datepicker();
 	$("#searchStrtDate").calendar( $("#searchEndngDate") );
+	/*
 	if(sAuthSqVal == 2){
 		document.getElementById("portfolio").style.display="";
 	}
+	
 	$("#conTitle").empty();
 	const conBtn = document.getElementById("conBtn");
 	conBtn.remove();
 	var conTitleHtml = "";
 	conTitleHtml += '<h3>My Deal</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
-	
-	$("#myDeal").addClass("active");
+	*/
+	//$("#myDeal").addClass("active");
 	
 	myDealSearchList();
 });   
