--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
@@ -279,8 +279,8 @@ function ShowList(data,callback){
 	            	html += '           <div class="user_wrap">';
 	            	html += '               <div class="user">';
 	            	html += '                   <ul>';
-	            	if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl !=""){
-	                	html +=		'                <li class="user_img"><img src="'+result[i].artstProfileImgUrl+'" alt=""></li>';
+	            	if(result[i].mbrProfileImgUrl != null && result[i].mbrProfileImgUrl !=""){
+	                	html +=		'                <li class="user_img"><img src="'+result[i].mbrProfileImgUrl+'" alt=""></li>';
 	            	}else{
 	                	html +=		'                <li class="user_img"><img src="/resources/img/img_new/ico_dauser.png" alt=""></li>';
 	            	}
