--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -82,7 +82,7 @@
     </style>
     
     <link rel="icon" type="image/png" href="/resources/img/favicon.png">
-    
+                <link type="text/css" rel="stylesheet" href="/resources/css/common_new.css"/>
     
     
 </head>
@@ -91,12 +91,12 @@
 	<div class="wrap">
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>  		
 		<div class="body-wrap">
-			<div class="contents">
-				<div class="con-wrap">
-					<th:block th:replace="thymeleaf/myPageLeft :: myPageLeftFragment"></th:block>
-					
-					<div class="con-right m-max1300" style="display:none">
-						<div class="me-left">
+		<div class="mypage_wrap">
+					<h2>My Deal</h2>
+					<div class="mypage_contents">
+		            	<div id = "left_menu"></div>
+						<div class="contents_right">
+						<div>
 							<div class="med">
 								<h2 class="">거래정보</h2>
 									<div class="med-ic">
@@ -898,8 +898,10 @@ window.onpopstate = function(e) {   
  */
 jQuery(document).ready(function() {
 	
-	$(".selectpicker").selectpicker(); //셀렉트피커 활성화
+	 $("#left_menu").load("/myPage/mypage_common_left");  // 레프트 메뉴 삽입
 	
+	$(".selectpicker").selectpicker(); //셀렉트피커 활성화
+	/*
 	$("#conTitle").empty();
 	const conBtn = document.getElementById("conBtn");
 	conBtn.remove();
@@ -907,6 +909,7 @@ jQuery(document).ready(function() {
 	conTitleHtml += '<h3>거래 계약 상세</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
 	$("#myDeal").addClass("active");
+	*/
 	$("#sbx_trnsprtAreaCd").selectpicker("hide"); //운송지역코드 숨기기
 	
 	if(result.dealInfo.sellPaymntSttsCd == "2PW" && result.dealInfo.dealSttsCd == "TP" && result.dealInfo.dealTypCd == "A"){ //판매자 결제 미완료면
