--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
@@ -340,8 +340,8 @@ function ShowList(data,callback){
 	                	html +=		'                </ul>';
 	                	html +=		'            </div>';                                        
 	                	html +=		'            <div class="header">';
-	                	if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl !=""){
-		                	html +=		'                <div class="user_img"><img src="'+result[i].artstProfileImgUrl+'" alt=""></div>';
+	                	if(result[i].mbrProfileImgUrl != null && result[i].mbrProfileImgUrl !=""){
+		                	html +=		'                <div class="user_img"><img src="'+result[i].mbrProfileImgUrl+'" alt=""></div>';
 	                	}else{
 		                	html +=		'                <div class="user_img"><img src="/resources/img/img_new/ico_dauser.png" alt=""></div>';
 	                	}
@@ -393,8 +393,8 @@ function ShowList(data,callback){
 	                	html +=		'                </ul>';
 	                	html +=		'            </div>';                                        
 	                	html +=		'            <div class="header">';
-	                	if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl !=""){
-		                	html +=		'                <div class="user_img"><img src="'+result[i].artstProfileImgUrl+'" alt=""></div>';
+	                	if(result[i].mbrProfileImgUrl != null && result[i].mbrProfileImgUrl !=""){
+		                	html +=		'                <div class="user_img"><img src="'+result[i].mbrProfileImgUrl+'" alt=""></div>';
 	                	}else{
 		                	html +=		'                <div class="user_img"><img src="/resources/img/img_new/ico_dauser.png" alt=""></div>';
 	                	}	                	
