--- a/src/main/resources/static/css/common_new.css
+++ b/src/main/resources/static/css/common_new.css
@@ -155,6 +155,7 @@ input[type="password"] {
 .exhint_row .contents ul li .user_wrap{position: relative;border-top: 1px solid #e8e8e8;border-bottom: 1px solid #e8e8e8;}
 .exhint_row .contents ul li .user_wrap:after{content: "";display: block;clear: both;}
 .exhint_row .contents ul li .user_wrap .user{float: left;margin: 7px 16px;}
+.exhint_row .contents ul li .user_wrap .user img{width: 60px;height: 60px;} /* 23.08.23 박재현 내용 추가 */
 .exhint_row .contents ul li .user_wrap .user ul .user_name{padding: 20px;}
 .exhint_row .contents ul li .user_wrap .icon_box{float: right;}
 .exhint_row .contents ul li .user_wrap .user_name span{background: #8f8f8f;font-size: 16px;font-weight: 500;color: #ffffff;padding: 3px 8px;border-radius: 5px;display: inline-block;}
@@ -199,16 +200,18 @@ input[type="password"] {
 .mypage_contents .contents_left .myinfo_wrap{background: #f5f5f5;border-radius: 30px 0 0 30px;}
 .mypage_contents .contents_left .myinfo_wrap:after{content: "";display: block;clear: both;}
 
-.mypage_contents .contents_left .myinfo_wrap .myinfo_pic{width: 300px;height: 243px;background: url("../img/img_new/myinfo_da_pic.png") 50% 50% no-repeat;}
 /* 2023-07-31 정영우 수정 (회원 프로필사진 동적으로 넣기 위해)*/
 .mypage_contents .contents_left .myinfo_wrap .myinfo_pic{
 	width: 300px;
 	height: 243px;
-	background-image: url("../img/mypage/myinfo_da_pic.png");
 	background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 140px 140px;
-}
+	display: flex;
+    justify-content: center;
+    align-items: center;
+} /* 23.08.23 박재현 내용 수정 */
+.mypage_contents .contents_left .myinfo_wrap .myinfo_pic img{width: 150px;height: 150px;} /* 23.08.23 박재현 내용 추가 */
 .mypage_contents .contents_left .myinfo_wrap .myinfo_con .name{text-align: center;font-size: 24px;font-weight: bold;letter-spacing: -1px;}
 .mypage_contents .contents_left .myinfo_wrap .myinfo_con .name span{display: inline-block;width: 30px;height: 38px;background: url("../img/img_new/ico_badge.png") 0 0 no-repeat;vertical-align: bottom;}
 .mypage_contents .contents_left .myinfo_wrap .myinfo_con .email{text-align: center;font-size: 18px;font-weight: 400;padding: 14px 0;}
@@ -428,6 +431,7 @@ input[type="password"] {
 .showingoff_pic .header{height: 83px;margin-top: 16px;}
 .showingoff_pic .header:after{content: "";display: block;clear: both;}
 .showingoff_pic .header .user_img{display: inline-block;float: left;height: 83px;padding-top: 3px;}
+.showingoff_pic .header .user_img img{width: 60px;height: 60px;} /* 23.08.23 박재현 내용 추가 */
 .showingoff_pic .header .user_name{float: left;}
 .showingoff_pic .header .user_name li{padding: 0 0 10px 20px;}
 .showingoff_pic .header .user_name span{background: #8f8f8f;font-size: 16px;font-weight: 500;color: #ffffff;padding: 3px 8px;border-radius: 5px;display: inline-block;}
