--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
@@ -110,11 +110,11 @@
                 </ul>
             </div>
             <div class="input_wrap">
-                <div class="input_cal" style="display: inline; position: static;">
+                <div class="input_cal" style="display: flex; position: static;width: auto;align-items: center;">
                 	<input type="date" id="startDate" onchange="checkCalendar()">
-                	<span>~</span>
+                	<span style="margin: 0 10px;">~</span>
                 	<input type="date" id="endDate" onchange="checkCalendar()">
-                	<div class="sel_sorting">
+                	<div class="sel_sorting" style="position: relative;top: auto;right: auto;margin: 0 10px;">
 	                    <select class="exhSelectBox" name="comtSort" id="comtSort">
 	                        <option value="">정렬</option>
 	                        <option value="newest">최신순</option>
@@ -123,12 +123,12 @@
 	                        <option value="pastOrder">과거 순</option>
 	                    </select>
 	                </div>
-                    <div class="sel_form" style="display: inline-block; margin-left: 3px;">
+                    <div class="sel_form" style="position: relative;top: auto;right: auto;margin-right: 10px;">
 	                    <select class="exhSelectBox" name="exhibitRegionCd" id="exhibitRegionCd">
 	                        <option value="">지역</option>
 	                    </select>
 	                </div>
-	                <div class="sel_form" style="display: inline-block; margin-left: 3px;">
+	                <div class="sel_form" style="position: relative;top: auto;right: auto;">
 	                    <select class="exhSelectBox" name="exhibitTypCd" id="exhibitTypCd">
 	                        <option value="">구분</option>
 	                    </select>
