pc -> 셀렉트 박스 레이아웃 수정

--- a/src/main/resources/templates/thymeleaf/fo/community/community_event.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_event.html
@@ -122,7 +122,7 @@
             <!-- <button class="btn_recording">기록하기</button> -->
             <!-- mobile html 끝 -->
             <div class="sel_wrap">
-                <div class="sel_sortation right0">
+                <div class="sel_sortation" style="top: auto;right: auto;">
                     <select name="" id="" onchange="searchEventType(this);">
                         <option value="">구분</option>
                         <option value="1">진행중</option>
