--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -116,11 +116,11 @@
                 </ul>
             </div>
             <div class="input_wrap">
-                <div class="input_cal" style="display: inline; position: static;">
+                <div class="input_cal" style="display: flex; position: static;width: auto;align-items: center;">
                 	<input type="date" id="startDate" onchange="checkCalendar()">
-                	<span class="">~</span>
+                	<span style="margin: 0 10px;">~</span>
                 	<input type="date" id="endDate" onchange="checkCalendar()">
-                	<div class="sel_sorting">
+                	<div class="sel_sorting" style="position: relative;top: auto;right: auto;margin: 0 10px;">
                         <select name="comtSort" id="comtSort">
                             <option value="">정렬</option>
                             <option value="newest">최신순</option>
@@ -129,7 +129,7 @@
                             <option value="pastOrder">과거 순</option>
                         </select>
                     </div>
-                    <div class="sel_form" style="display: inline-block; margin-left: 3px;">
+                    <div class="sel_form" style="position: relative;top: auto;right: auto;margin-right: 10px;">
                         <select name="comtWorkShpCd" id="comtWorkShpCd">
                             <option value="">형태</option>
                             <option value="PLN">평면</option>
